--- a/W3-ASP.NET-Core-Web-App/Pages/Index.cshtml
+++ b/W3-ASP.NET-Core-Web-App/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to my ASP.NET Core Web App</h1>
+    <p>You can visit my GitHub repository for this project  <a href="https://github.com/Stas-Kloyzner/W3-ASP.NET-Core-Web-App">HERE</a>.</p>
 </div>
